--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_fonts: ^6.1.0
   
   cupertino_icons: ^1.0.8
+  device_preview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,14 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/kangkung.jpg
+    - assets/tomat.jpg
+    - assets/apel.jpg
+    - assets/pisang.jpg
+    - assets/daging.jpg
+    - assets/ayam.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
